# wmml2

./: .gitignore  CMakeLists.txt  LICENSE  README.md  install_gtest.ps1  linux.sh  main.cpp  win.ps1  wmml.cpp  wmml.h
src/: CMakeLists.txt  base_wmml.cpp  base_wmml.h  main.cpp  wmml.cpp  wmml.h  wmml_archive_struct.cpp  wmml_marker.cpp
tests/: CMakeLists.txt  constants.h  main.cpp
